app/src/main/java/sdk/api/development/examples/festivo_api/errors/FatalError.java
package sdk.api.development.examples.festivo_api.errors;

public class FatalError extends RuntimeException {
    
}
